<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>apriltag3</name>
  <description>apriltag3</description>
  <version>0.0.1</version>
  <maintainer email="ichangjian@163.com">yancj</maintainer>
  <author>ichangjian</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>opencv</build_depend>
</package>
